data/derived/comb/progs/unify/prog5343.ml.out
Characters 69-85:
  let prod = (mulByDigit l x) + o in
             ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
